# AndroidAllDemos

./: build.gradle  config.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main_all.xml  activity_main_ndk.xml  activity_main_photo.xml  activity_main_tools.xml  activity_player_main.xml  activity_reflect.xml  activity_reflect_base.xml  activity_transition_demo.xml  activity_transition_main.xml  activity_transition_options.xml  activity_transition_options_more.xml  activity_transition_override_pending.xml  activity_transition_style.xml  activity_visualizer_demo.xml  activity_visualizer_main.xml  activity_visualizer_music_detail.xml  item_visualizer_list.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
ndk/ndkdemo/: build.gradle
ndk/ndkdemo/src/main/: AndroidManifest.xml
ndk/ndkdemo/src/main/cpp/: CMakeLists.txt  array_operation.cpp  bitmap.cpp  encryptor.cpp  file_operation.cpp  jan_jason_ndkdemo_NdkDemoActivity.h  jni_callback.cpp  native-gles3.cpp  native-lib.cpp
ndk/ndkdemo/src/main/res/layout/: activity_ndkdemo_ndk.xml  activity_open_gl_triangle.xml
opengl/neopencv/: build.gradle
opengl/neopencv/src/main/: AndroidManifest.xml
opengl/neopencv/src/main/cpp/: CMakeLists.txt  open-lib.cpp
opengl/neopencv/src/main/res/layout/: activity_ne_recognize.xml
opengl/neopencv/src/main/res/values/: strings.xml
opengl/opengl/: build.gradle
opengl/opengles/: build.gradle
opengl/opengles/src/main/: AndroidManifest.xml
opengl/opengles/src/main/cpp/: CMakeLists.txt  open-lib.cpp
opengl/opengles/src/main/cpp/graphics/: GLUtils.cpp  GLUtils.h  Matrix.cpp  Matrix.h
opengl/opengles/src/main/cpp/lesson1/: Native1Lesson.cpp  Native1Lesson.h
opengl/opengles/src/main/res/layout/: activity_open_gl.xml
otherdemo/reflectlibrary/src/main/: AndroidManifest.xml
otherdemo/reflectlibrary/src/main/res/values/: strings.xml
photos/takephotodemo/: build.gradle
photos/takephotodemo/src/main/: AndroidManifest.xml
picture/myimageloader/: build.gradle
picture/myimageloader/src/main/: AndroidManifest.xml
picture/myimageloader/src/main/res/layout/: activity_imageloader_main.xml  media_chooser_item.xml
picture/takephoto/: build.gradle
picture/takephoto/src/main/: AndroidManifest.xml
picture/takephotodemo/: build.gradle
picture/takephotodemo/src/main/res/menu/: menu_main_tp.xml
player/exomediademo/: build.gradle
player/exomediademo/src/main/: AndroidManifest.xml
player/exomedialib/: build.gradle
player/playlistlib/: build.gradle
popupwindow/popupwindowdemo/: build.gradle
popupwindow/popupwindowdemo/src/main/: AndroidManifest.xml
popupwindow/popupwindowdemo/src/main/res/layout/: list_item_popupwindow.xml
popupwindow/popupwindowdemo/src/main/res/values/: colors.xml  styles.xml
reflectlibrary/: build.gradle
tools/bulk/: build.gradle
tools/bulk/src/main/: AndroidManifest.xml
tools/bulk/src/main/res/drawable/: checkbox_style.xml
tools/bulk/src/main/res/layout/: activity_bulk.xml  content_main_bulk.xml  item_bulk_detail_adapter.xml
tools/bulk/src/main/res/values/: colors.xml  strings.xml  styles.xml
tools/multirecyclerviewdemo/: build.gradle
tools/multirecyclerviewdemo/src/main/: AndroidManifest.xml
tools/multirecyclerviewdemo/src/main/res/layout/: activity_base_recycler_adapter_helper.xml  activity_more_multi.xml
tools/multirecyclerviewdemo/src/main/res/values/: styles.xml
tools/multirrecyclerview/: build.gradle
tools/pictureselector/src/main/: AndroidManifest.xml
transitions/animate/: build.gradle
transitions/animate/src/main/: AndroidManifest.xml
transitions/animate/src/main/res/layout/: activity_animate_main.xml  activity_circular_reveal.xml
transitions/animate/src/main/res/values/: styles.xml
transitions/easyanimations/src/main/: AndroidManifest.xml
transitions/easyanimations/src/main/res/values/: strings.xml
transitions/easyanimationsdemo/: build.gradle
transitions/easyanimationsdemo/src/main/: AndroidManifest.xml
transitions/easyanimationsdemo/src/main/res/layout/: activity_animation_detail.xml  activity_animation_list.xml  activity_animation_twopane.xml  fragment_animation_detail.xml
transitions/easyanimationsdemo/src/main/res/values/: strings.xml  styles.xml
transitions/materialanimationdemo/: build.gradle
transitions/materialanimationdemo/src/main/: AndroidManifest.xml
transitions/materialanimationdemo/src/main/res/layout/: activity_transition1.xml
transitions/materialanimationdemo/src/main/res/menu/: menu_main.xml
transitions/materialtransitions/: build.gradle
transitions/materialtransitions/src/main/: AndroidManifest.xml
transitions/materialtransitions/src/main/res/layout/: activity_base.xml  transition_m_list_item.xml
transitions/mtransition/: build.gradle
transitions/mtransitiondemo/: build.gradle
transitions/mtransitiondemo/src/main/: AndroidManifest.xml
transitions/switchlayout/src/main/: AndroidManifest.xml
transitions/switchlayoutdemo/: build.gradle
transitions/switchlayoutdemo/src/main/: AndroidManifest.xml
transitions/transitionEverywhere/: build.gradle
transitions/transitioneverywheredemo/: build.gradle
transitions/transitioneverywheredemo/src/main/: AndroidManifest.xml
transitions/transitionhelperdemo/: build.gradle
transitions/transitionhelperdemo/src/main/: AndroidManifest.xml
transitions/ycshareelementdemo/: build.gradle
transitions/ycshareelementdemo/src/main/: AndroidManifest.xml
visualizer/visualizerlib/: build.gradle
visualizer/visualizerlib/src/main/: AndroidManifest.xml
visualizer/visualizerlib2/: build.gradle
visualizer/visualizerlib2/src/main/: AndroidManifest.xml
visualizer/visualizerlibCoocent/: README.md
visualizer/visualizerlibrary/: README.md  build.gradle
visualizer/visualizerlibrary/src/main/: AndroidManifest.xml
visualizer/visualizerlibrary/src/main/cpp/: CMakeLists.txt  Common.h  FixedFFT.h  GLSoundParticle.h  LogUtils.h  OpenGLVisualizerJni.h  SimpleVisualizerJni.cpp
(+708 files in other folders)
